--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in Payyanur.
+    Made with ❤️ by Varun Karanda.
   </footer>
   <script src="index.js"></script>
 </body>
